@@ -25,14 +25,10 @@ import com.mongodb.ReadPreference;
 import com.mongodb.client.MongoCollection;
 import com.mongodb.client.MongoDatabase;
 import com.querydsl.core.NonUniqueResultException;
-import com.querydsl.core.QueryResults;
 import com.querydsl.core.testutil.MongoDB;
 import com.querydsl.core.types.*;
-import com.querydsl.core.types.dsl.ListPath;
-import com.querydsl.core.types.dsl.StringPath;
 import com.querydsl.mongodb.domain.*;
 import com.querydsl.mongodb.domain.User.Gender;
-import java.lang.reflect.AnnotatedElement;
 import java.net.UnknownHostException;
 import java.util.*;
 import java.util.function.Function;
@@ -117,7 +113,7 @@ public class MongodbQueryTest {
 
   @Test
   public void list_keys() {
-    Document u =
+    var u =
         where(user.firstName.eq("Jaakko")).fetch(user.firstName, user.mainAddress().street).get(0);
     assertThat(u.get("firstName")).isEqualTo("Jaakko");
     assertThat(u.get("lastName")).isNull();
@@ -127,21 +123,21 @@ public class MongodbQueryTest {
 
   @Test
   public void singleResult_keys() {
-    Document u = where(user.firstName.eq("Jaakko")).fetchFirst(user.firstName);
+    var u = where(user.firstName.eq("Jaakko")).fetchFirst(user.firstName);
     assertThat(u.get("firstName")).isEqualTo("Jaakko");
     assertThat(u.get("lastName")).isNull();
   }
 
   @Test
   public void uniqueResult_keys() {
-    Document u = where(user.firstName.eq("Jaakko")).fetchOne(user.firstName);
+    var u = where(user.firstName.eq("Jaakko")).fetchOne(user.firstName);
     assertThat(u.get("firstName")).isEqualTo("Jaakko");
     assertThat(u.get("lastName")).isNull();
   }
 
   @Test
   public void list_deep_keys() {
-    Document u = where(user.firstName.eq("Jaakko")).fetchFirst(user.addresses.any().street);
+    var u = where(user.firstName.eq("Jaakko")).fetchFirst(user.addresses.any().street);
     List<Document> addresses = u.get("addresses", List.class);
     for (Document a : addresses) {
       assertThat(a.get("street")).isNotNull();
@@ -163,7 +159,7 @@ public class MongodbQueryTest {
 
   @Test
   public void contains_key() {
-    MapEntity entity = new MapEntity();
+    var entity = new MapEntity();
     entity.getProperties().put("key", "value");
     ds.save(entity);
 
@@ -181,7 +177,7 @@ public class MongodbQueryTest {
 
   @Test
   public void contains_key_not() {
-    MapEntity entity = new MapEntity();
+    var entity = new MapEntity();
     entity.getProperties().put("key", "value");
     ds.save(entity);
 
@@ -276,16 +272,16 @@ public class MongodbQueryTest {
 
   @Test
   public void dates() {
-    long current = System.currentTimeMillis();
-    int dayInMillis = 24 * 60 * 60 * 1000;
-    Date start = new Date(current);
+    var current = System.currentTimeMillis();
+    var dayInMillis = 24 * 60 * 60 * 1000;
+    var start = new Date(current);
     ds.delete(ds.createQuery(Dates.class));
-    Dates d = new Dates();
+    var d = new Dates();
     d.setDate(new Date(current + dayInMillis));
     ds.save(d);
-    Date end = new Date(current + 2 * dayInMillis);
+    var end = new Date(current + 2 * dayInMillis);
 
-    Document datesDocument = asDocument(d);
+    var datesDocument = asDocument(d);
 
     assertThat(query(dates).where(dates.date.between(start, end)).fetchFirst())
         .isEqualTo(datesDocument);
@@ -338,7 +334,7 @@ public class MongodbQueryTest {
 
   @Test
   public void order() {
-    List<Document> users = query().orderBy(user.age.asc()).fetch();
+    var users = query().orderBy(user.age.asc()).fetch();
     assertThat(users).isEqualTo(asList(u1, u2, u3, u4));
 
     users = query().orderBy(user.age.desc()).fetch();
@@ -354,7 +350,7 @@ public class MongodbQueryTest {
 
   @Test
   public void listResults() {
-    QueryResults<Document> results = query().limit(2).orderBy(user.age.asc()).fetchResults();
+    var results = query().limit(2).orderBy(user.age.asc()).fetchResults();
     assertThat(results.getTotal()).isEqualTo(4L);
     assertThat(results.getResults()).hasSize(2);
 
@@ -365,7 +361,7 @@ public class MongodbQueryTest {
 
   @Test
   public void emptyResults() {
-    QueryResults<Document> results = query().where(user.firstName.eq("XXX")).fetchResults();
+    var results = query().where(user.firstName.eq("XXX")).fetchResults();
     assertThat(results.getTotal()).isEqualTo(0L);
     assertThat(results.getResults()).isEqualTo(Collections.emptyList());
   }
@@ -517,9 +513,9 @@ public class MongodbQueryTest {
 
   @Test
   public void iterate() {
-    User a = addUser("A", "A");
-    User b = addUser("A1", "B");
-    User c = addUser("A2", "C");
+    var a = addUser("A", "A");
+    var b = addUser("A1", "B");
+    var c = addUser("A2", "C");
 
     Iterator<Document> i =
         where(user.firstName.startsWith("A")).orderBy(user.firstName.asc()).iterate();
@@ -532,7 +528,7 @@ public class MongodbQueryTest {
 
   @Test
   public void uniqueResultAndLimitAndOffset() {
-    SimpleMongodbQuery q = query().where(user.firstName.startsWith("Ja")).orderBy(user.age.asc());
+    var q = query().where(user.firstName.startsWith("Ja")).orderBy(user.age.asc());
     assertThat(q.fetch()).hasSize(4);
     assertThat(q.fetch().get(0)).isEqualTo(u1);
   }
@@ -557,8 +553,8 @@ public class MongodbQueryTest {
 
   @Test
   public void various() {
-    ListPath<Address, QAddress> list = user.addresses;
-    StringPath str = user.lastName;
+    var list = user.addresses;
+    var str = user.lastName;
     List<Predicate> predicates = new ArrayList<Predicate>();
     predicates.add(str.between("a", "b"));
     predicates.add(str.contains("a"));
@@ -586,8 +582,8 @@ public class MongodbQueryTest {
     predicates.add(list.isNotEmpty());
 
     for (Predicate predicate : predicates) {
-      long count1 = where(predicate).fetchCount();
-      long count2 = where(predicate.not()).fetchCount();
+      var count1 = where(predicate).fetchCount();
+      var count2 = where(predicate.not()).fetchCount();
       assertThat(count1 + count2).as(predicate.toString()).isEqualTo(4);
     }
   }
@@ -604,17 +600,17 @@ public class MongodbQueryTest {
 
   @Test
   public void in_objectIds() {
-    Item i = new Item();
+    var i = new Item();
     i.setCtds(Arrays.asList(ObjectId.get(), ObjectId.get(), ObjectId.get()));
     ds.save(i);
 
-    assertThat(where(item, item.ctds.contains(i.getCtds().get(0))).fetchCount() > 0).isTrue();
+    assertThat(where(item, item.ctds.contains(i.getCtds().getFirst())).fetchCount() > 0).isTrue();
     assertThat(where(item, item.ctds.contains(ObjectId.get())).fetchCount() == 0).isTrue();
   }
 
   @Test
   public void in_objectIds2() {
-    Item i = new Item();
+    var i = new Item();
     i.setCtds(Arrays.asList(ObjectId.get(), ObjectId.get(), ObjectId.get()));
     ds.save(i);
 
@@ -638,14 +634,14 @@ public class MongodbQueryTest {
 
   @Test
   public void readPreference() {
-    SimpleMongodbQuery query = query();
+    var query = query();
     query.setReadPreference(ReadPreference.primary());
     assertThat(query.fetchCount()).isEqualTo(4);
   }
 
   @Test
   public void asDBObject() {
-    SimpleMongodbQuery query = query();
+    var query = query();
     query.where(user.firstName.eq("Bob"), user.lastName.eq("Wilson"));
     assertThat(query.asDocument())
         .isEqualTo(new Document().append("firstName", "Bob").append("lastName", "Wilson"));
@@ -687,8 +683,8 @@ public class MongodbQueryTest {
   }
 
   private void assertQuery(SimpleMongodbQuery query, Document... expected) {
-    String toString = query.toString();
-    List<Document> results = query.fetch();
+    var toString = query.toString();
+    var results = query.fetch();
 
     assertThat(results).as(toString).isNotNull();
     if (expected == null) {
@@ -696,21 +692,21 @@ public class MongodbQueryTest {
       return;
     }
     assertThat(results.size()).as(toString).isEqualTo(expected.length);
-    int i = 0;
+    var i = 0;
     for (Document u : expected) {
       assertThat(results.get(i++)).as(toString).isEqualTo(u);
     }
   }
 
   private User addUser(String first, String last) {
-    User user = new User(first, last);
+    var user = new User(first, last);
     ds.save(user);
     return user;
   }
 
   private User addUser(
       String first, String last, int age, Address mainAddress, Address... addresses) {
-    User user = new User(first, last, age, new Date());
+    var user = new User(first, last, age, new Date());
     user.setGender(Gender.MALE);
     user.setMainAddress(mainAddress);
     for (Address address : addresses) {
@@ -774,14 +770,14 @@ public class MongodbQueryTest {
 
     @Override
     protected DBRef asReferenceKey(Class<?> entity, Object id) {
-      String collection = morphia.getMapper().getCollectionName(entity);
+      var collection = morphia.getMapper().getCollectionName(entity);
       Key<?> key = new Key<Object>(entity, collection, id);
       return morphia.getMapper().keyToDBRef(key);
     }
 
     @Override
     protected String getKeyForPath(Path<?> expr, PathMetadata metadata) {
-      AnnotatedElement annotations = expr.getAnnotatedElement();
+      var annotations = expr.getAnnotatedElement();
       if (annotations.isAnnotationPresent(Id.class)) {
         Path<?> parent = expr.getMetadata().getParent();
         if (parent.getAnnotatedElement().isAnnotationPresent(Reference.class)) {
@@ -790,12 +786,12 @@ public class MongodbQueryTest {
           return "_id";
         }
       } else if (annotations.isAnnotationPresent(Property.class)) {
-        Property property = annotations.getAnnotation(Property.class);
+        var property = annotations.getAnnotation(Property.class);
         if (!property.value().equals(Mapper.IGNORED_FIELDNAME)) {
           return property.value();
         }
       } else if (annotations.isAnnotationPresent(Reference.class)) {
-        Reference reference = annotations.getAnnotation(Reference.class);
+        var reference = annotations.getAnnotation(Reference.class);
         if (!reference.value().equals(Mapper.IGNORED_FIELDNAME)) {
           return reference.value();
         }
